--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>
   About me:Big Rambo
 </title>
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 <h1>Welcome to my webiste</h1>
